<resources>
    <string name="app_name">Fly</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Don\'t have an account?</string>
    <string name="forgotten_password">Forgotten Your Password?</string>
    <string name="title_activity_bdview_screen">BDviewScreen</string>
    <string name="search">Search</string>
    <string name="title_activity_sign_up_screen">signUpScreen</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="date_birth">Date Of Birth</string>
    <string name="phoneNum1">Phone Number </string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="password_retype">Retype Password</string>
    <string name="channel_name">test channel</string>
    <string name="channel_description">test description</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_instant__messaging">instant_Messaging</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>
